Resolves scrollbar issue for modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -885,6 +885,7 @@ a.address-text {
 
 .is-frozen {
 	overflow: hidden;
+	scrollbar-gutter: stable;
 }
 
 .modal {
